@@ -4,6 +4,7 @@ S3method("[",pedigree)
 S3method("[",pedigreeList)
 S3method(as.data.frame,pedigree)
 S3method(as.data.frame,pedigreeList)
+S3method(fixParents,data.frame)
 S3method(kinship,pedigree)
 S3method(kinship,pedigreeList)
 S3method(plot,pedigree)
@@ -28,7 +29,6 @@ export(findAvailAffected)
 export(findAvailNonInform)
 export(findUnavailable)
 export(fixParents)
-export(fixParents.data.frame)
 export(fscore.pedigree)
 export(generate_aff_inds)
 export(generate_colors)
@@ -40,7 +40,7 @@ export(legendPlot)
 export(makefamid)
 export(makekinship)
 export(max_kin_inf)
-export(norm_data)
+export(norm_ped)
 export(num_child)
 export(pedigree)
 export(pedigree.legend)
